--- a/p2p-pay/pom.xml
+++ b/p2p-pay/pom.xml
@@ -84,11 +84,10 @@
         </dependency>
 
         <!-- commons-logging依赖的JAR配置start -->
-        <dependency>
+       <!-- <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
-        </dependency>
+        </dependency>-->
 
         <!-- Log4j的配置start -->
         <dependency>
@@ -111,7 +110,6 @@
         <dependency>
             <groupId>com.github.wxpay</groupId>
             <artifactId>wxpay-sdk</artifactId>
-            <version>0.0.3</version>
         </dependency>
 
         <dependency>
